[34380] Restrict height of date field filters and correct x icon
`visibility: hidden` doesn't remove the height of the element, which for
date causes many elements to be still causing the DOM height. Setting it
to `display: none` will however remove it from the grid calculation..
Setting the height to 0 caused a scrollbar to appear

[ci skip]

https://community.openproject.com/wp/34380

--- a/frontend/src/global_styles/content/_projects_list.sass
+++ b/frontend/src/global_styles/content/_projects_list.sass
@@ -47,6 +47,7 @@ form.project-filters
     // visibility based on operator type
     &.hidden
       visibility: hidden
+      height: 55px
 
     // visibility for list value selectors
     .multi-select
